--- a/src/components/JsonTable.css
+++ b/src/components/JsonTable.css
@@ -1,3 +1,19 @@
+/*
+ * Copyright (c) 2019, Mercenary Creators Company. All rights reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 .TableHeadStyle {
     font-weight: 900 !important;
     font-size: 1.1rem;
@@ -13,6 +29,8 @@
 }
 
 .TableDataStyle {
+    font-size: 1.1rem;
+    font-weight: 900 !important;
     border: 2px solid black !important;
 }
 
@@ -22,7 +40,7 @@
 }
 
 .darkRowStyle:hover {
-    background-color: #6a6e8f;
+    background-color: #888eb0;
 }
 
 .evenRowStyle {
